# OpenMP-Virtual-Screen

./: CMakeLists.txt  README.md  build_image.sh  interactive.sh
data/: ligand.xyz
include/: simd.h  utils.h
src/: parallel_docking_custom_reduction.cpp  parallel_docking_manual_reduction.cpp  serial_docking.cpp  simd_parallel_docking.cpp  vector_norm.cpp
